# DataVizHub

./: docker-compose.yml
backend/: Dockerfile  db.sqlite3  entrypoint.sh  pyproject.toml
backend/DataVizUploader/: models.py  urls.py  utils.py  views.py
backend/DataVizUploader/management/commands/: initadmin.py
backend/api/: settings.py  urls.py
backend/uploads/uploads/: Book1_fAZlGQ0.csv  Untitled_spreadsheet_-_Sheet1_VswbIEr.csv  comma-test.csv  hheet1_5YqyXCC.csv  string-number-test.csv
frontend/: package-lock.json  package.json
frontend/src/: App.js
frontend/src/components/: AnalyticsDashboard.js  AnalyticsDashboard.module.css  Charts.js  Charts.module.css  DeleteCard.js  FileTab.js  FileTap.js  Form.js  Form.module.css  Tab.js  Tab.module.css  advad.js  chartjs.js  utils.js
